--- a/cs02.html
+++ b/cs02.html
@@ -319,25 +319,23 @@ div.tocify {
 </div>
 <div id="case-study-goals" class="section level1">
 <h1>Case Study Goals</h1>
-<p>Using data from the World Bank, CIA Factbook, or a complex data source of your own choosing, - create a Shiny app in R to illustrate an aspect of our world in data - create an accompanying Tableau dashboard interactive visual presentation of our world in data</p>
+<p>Using data from the World Bank, CIA Factbook, or a complex data source of your own choosing,</p>
+<ul>
+<li>create a Shiny app in R to illustrate an aspect of our world in data</li>
+<li>create an accompanying Tableau dashboard interactive visual presentation of our world in data</li>
+</ul>
 </div>
-<div id="data-coming-soon" class="section level1">
-<h1>Data (coming soon)</h1>
-<!---
-
-R Tutorial Data Set
-- [popDF.RData](data/popDF.RData)
-- [infMortDF.RData](data/infMortDF.RData)
-- [codeMapDF.RData](data/codeMapDF.RData)
-- [countries.csv](data/countries.csv)
-
-Full People And Society Data Set:
-- [full.RData](data/full.RData)
-
-How To Obtain Data from Factbook:
-- [Factbook Tutorial](data/data_file_2014.html)
-
---->
+<div id="data" class="section level1">
+<h1>Data</h1>
+<p>R Tutorial Data</p>
+<ul>
+<li><a href="decks/data/popDF.RData">popDF.RData</a></li>
+<li><a href="decks/data/infMortDF.RData">infMortDF.RData</a></li>
+<li><a href="decks/data/codeMapDF.RData">codeMapDF.RData</a></li>
+<li><a href="decks/data/country_codes.csv">country_codes.csv</a></li>
+</ul>
+<p>Full People And Society Data Set: - <a href="decks/data/full.RData">full.RData</a></p>
+<p>How To Obtain Data from Factbook: - <a href="decks/data/data_file_2014.html">Factbook Tutorial</a></p>
 </div>
 <div id="reports" class="section level1">
 <h1>Reports</h1>
@@ -351,18 +349,14 @@ How To Obtain Data from Factbook:
 <p><a href="https://www.tableau.com/academic/students">Tableau for Students</a></p>
 <p><a href="http://library.capture.duke.edu/Panopto/Pages/Viewer.aspx?id=05708679-00e5-45c3-bb31-fd3724cd8009">Introduction to Tableau Video</a></p>
 </div>
-<div id="slides-coming-soon" class="section level1">
-<h1>Slides (coming soon)</h1>
-<!---
-[Initial description of CIA Factbook Data and Plotting in R](decks/cs02_1_deck.html)
+<div id="slides" class="section level1">
+<h1>Slides</h1>
+<p><a href="decks/cs02_1_deck.html">Initial description of CIA Factbook data and plotting in R</a></p>
+<p><a href="decks/cs02_2_deck.html">Obtaining Tableau Guide</a></p>
+<p><a href="decks/cs02_3_deck.html">Tableau visualization of infant mortality</a> <!---
+[Tableau dashboard visualization of infant mortality](decks/cs02_4_deck.html)
 
-[Obtaining Tableau Guide](decks/cs02_2_deck.html)
-
-[Tableau visualization of Infant Mortality](decks/cs02_3_deck.html)
-
-[Tableau dashboard visualization of Infant Mortality](decks/cs02_4_deck.html)
-
---->
+---></p>
 </div>
 
 
