--- a/decks/data/data_file_2014.html
+++ b/decks/data/data_file_2014.html
@@ -90,6 +90,9 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
+.html-widget {
+  margin-bottom: 20px;
+}
 button.code-folding-btn:focus {
   outline: none;
 }
@@ -130,19 +133,12 @@ $(document).ready(function () {
 <p>Your first option is using the rank order section of the factbook which has txt files for each variable. However, the significant drawnback of this is that it only has one value for each country, i.e. you cannot use it to obtain a variable such as population structure since it has multiple values for each country. ` - Remember to give your columns names. - To find the corresponding number for each variable, e.g. 2119 for population, you use the “rankorderguide.html” and click on your desired variable. Then in the address bar at the top of the screen you can see the correct number for it. - You may need to delete columns/clean the data to obtain the correct format.</p>
 <p>Note: You will need to iterate this process for all desired variables &amp; merge the data sets to replicate the full.RData file.</p>
 <pre class="r"><code>library(tidyverse) # We will be importing our data using the tidyverse library</code></pre>
-<pre><code>## ── Attaching packages ───────────────────────────────────────────────────────────────────── tidyverse 1.2.1 ──</code></pre>
+<pre><code>## ── Attaching packages ─────────────────────── tidyverse 1.2.1 ──</code></pre>
 <pre><code>## ✔ ggplot2 3.0.0     ✔ purrr   0.2.5
 ## ✔ tibble  1.4.2     ✔ dplyr   0.7.6
 ## ✔ tidyr   0.8.1     ✔ stringr 1.3.1
 ## ✔ readr   1.1.1     ✔ forcats 0.3.0</code></pre>
-<pre><code>## Warning: package 'ggplot2' was built under R version 3.4.4</code></pre>
-<pre><code>## Warning: package 'tibble' was built under R version 3.4.3</code></pre>
-<pre><code>## Warning: package 'tidyr' was built under R version 3.4.4</code></pre>
-<pre><code>## Warning: package 'purrr' was built under R version 3.4.4</code></pre>
-<pre><code>## Warning: package 'dplyr' was built under R version 3.4.4</code></pre>
-<pre><code>## Warning: package 'stringr' was built under R version 3.4.4</code></pre>
-<pre><code>## Warning: package 'forcats' was built under R version 3.4.3</code></pre>
-<pre><code>## ── Conflicts ──────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
+<pre><code>## ── Conflicts ────────────────────────── tidyverse_conflicts() ──
 ## ✖ dplyr::filter() masks stats::filter()
 ## ✖ dplyr::lag()    masks stats::lag()</code></pre>
 <pre class="r"><code># get country codes
@@ -171,7 +167,6 @@ save(infMortDF, file=&quot;infMortDF.RData&quot;)</code></pre>
 <p>Your second option is to use the field html files. These have the advantage of being more complete and more detailed information on each variable. However, they are also in a less user-friendly format.</p>
 <pre class="r"><code>library(rvest)</code></pre>
 <pre><code>## Loading required package: xml2</code></pre>
-<pre><code>## Warning: package 'xml2' was built under R version 3.4.3</code></pre>
 <pre><code>## 
 ## Attaching package: 'rvest'</code></pre>
 <pre><code>## The following object is masked from 'package:purrr':
