--- a/cs03.html
+++ b/cs03.html
@@ -336,6 +336,7 @@ div.tocify {
 <div id="resources" class="section level1">
 <h1>Resources</h1>
 <p>Data Analysis Using Regression and Multilevel/Hierarchical Models by Gelman &amp; Hill</p>
+<p><a href="NCinfantmortalityrates.pdf">2015 NC Infant Mortality Rates, from NC State Center for Health Statistics</a></p>
 </div>
 <div id="slides-coming-soon" class="section level1">
 <h1>Slides (coming soon)</h1>
