--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ div.tocify {
 <td>TBD</td>
 </tr>
 <tr class="odd">
-<td><a href="https://stat.duke.edu/">TA TBA</a> <a href="mailto:amy.herring@duke.edu" title="email"><i class="fa fa-envelope"></i></a>  </td>
+<td><a href="https://stat.duke.edu/people/henry-kirveslahti-1">TA Henry Kirveslahti</a> <a href="mailto:henry.kirveslahti@duke.edu" title="email"><i class="fa fa-envelope"></i></a>  </td>
 <td>TBD</td>
 <td>TBD</td>
 </tr>
@@ -379,7 +379,7 @@ div.tocify {
 <tr class="odd">
 <td>September 5</td>
 <td>CS1: Modeling in Class</td>
-<td></td>
+<td>Signed Team Expectations Agreement</td>
 </tr>
 <tr class="even">
 <td>September 7</td>
@@ -402,7 +402,7 @@ div.tocify {
 <td></td>
 </tr>
 <tr class="even">
-<td>Septmeber 21</td>
+<td>September 21</td>
 <td>CS3: Hierarchical Models: Birth Weight Disparities</td>
 <td></td>
 </tr>
