--- a/decks/cs04_1_deck.html
+++ b/decks/cs04_1_deck.html
@@ -458,11 +458,11 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </section>
 
 <section id="introduction" class="slide level2">
-<h1>Introduction</h1>
+<h2>Introduction</h2>
 <p>We will visit some information sources you may consider when designing your own election prediction strategy. Each source can be used as a starting point, and then expanded upon or combined with another approach, to obtain the best possible prediction.</p>
 </section>
 <section id="current-polling-data" class="slide level2">
-<h1>Current Polling Data</h1>
+<h2>Current Polling Data</h2>
 <p>One strategy for predicting the winner in an election would be to use the latest aggregate polling data from a reputable source, e.g. FiveThirtyEight or The New York Times.</p>
 <ul>
 <li>Some polls are of likely voters, while others may not restrict to this group</li>
@@ -473,7 +473,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </ul>
 </section>
 <section id="historical-results" class="slide level2">
-<h1>Historical Results</h1>
+<h2>Historical Results</h2>
 <ul>
 <li>Use historical data from past elections, e.g. within a house district, within a state, nationally</li>
 <li>Useful when a state consistently votes for the same party but less useful for swing states</li>
@@ -481,16 +481,16 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </ul>
 </section>
 <section id="voter-turnout-data" class="slide level2">
-<h1>Voter Turnout Data</h1>
+<h2>Voter Turnout Data</h2>
 <ul>
-<li>States like NC make available data on who votes in each selection</li>
+<li>States like NC make available data on who votes in each election</li>
 <li>Voter turnout data can be used to construct a voting history for certain districts, demographic groups, etc.</li>
 <li>Locations with low or variable turnout often harder to predict</li>
 <li>Many better predictions take voter turnout data into account in some way</li>
 </ul>
 </section>
 <section id="ancillary-data" class="slide level2">
-<h1>Ancillary Data</h1>
+<h2>Ancillary Data</h2>
 <ul>
 <li>Voter results for other elections, e.g. Senate results when predicting the presidental election</li>
 <li>“It’s the economy, stupid” – James Carville</li>
