--- a/index.html
+++ b/index.html
@@ -312,10 +312,10 @@ div.tocify {
 <div id="teaching-team-and-office-hours" class="section level3">
 <h3>Teaching team and office hours</h3>
 <p>Note: office hours may vary due to travel and other commitments. Revisions to office hours will be noted in Sakai and on my office door.</p>
-<table style="width:29%;">
+<table style="width:75%;">
 <colgroup>
 <col width="15%" />
-<col width="6%" />
+<col width="52%" />
 <col width="6%" />
 </colgroup>
 <thead>
@@ -352,10 +352,10 @@ div.tocify {
 <h3>Topics and Important Dates</h3>
 <p>STA 440 contains a mixture of lecture, lab, and combination sessions at the usual class times. Sessions marked “lab” will be taught by TA’s and involve hands-on analysis and/or consultation about case studies.</p>
 <p>Note: this schedule is approximate and is likely to be modified as the course progresses. Readiness assessments will be given without advance notice. Assignments are due at the beginning of class unless otherwise specified.</p>
-<table style="width:62%;">
+<table style="width:76%;">
 <colgroup>
 <col width="15%" />
-<col width="25%" />
+<col width="38%" />
 <col width="22%" />
 </colgroup>
 <thead>
@@ -373,7 +373,7 @@ div.tocify {
 </tr>
 <tr class="even">
 <td>August 31</td>
-<td>CS1: Robust Regression</td>
+<td>CS1: Model Selection &amp; Validation</td>
 <td></td>
 </tr>
 <tr class="odd">
@@ -398,7 +398,7 @@ div.tocify {
 </tr>
 <tr class="odd">
 <td>September 19</td>
-<td>CS2: Tableau</td>
+<td>CS2: Hands-On with Tableau</td>
 <td></td>
 </tr>
 <tr class="even">
@@ -412,7 +412,7 @@ div.tocify {
 <td>CS2 Final Report: Our World in Data</td>
 </tr>
 <tr class="even">
-<td>Septmeber 28</td>
+<td>September 28</td>
 <td>CS3: Multilevel Models: Time Trends</td>
 <td></td>
 </tr>
