--- a/cs04.html
+++ b/cs04.html
@@ -319,7 +319,7 @@ div.tocify {
 </div>
 <div id="case-study-goals" class="section level1">
 <h1>Case Study Goals</h1>
-<p>Goals of this case study are (1) to predict whether the US House of Representatives remains in Republican control, and (2) to predict the outcomes of all NC Congressional elections.</p>
+<p>Goals of this case study are (1) to predict whether the US House of Representatives remains in Republican control, and (2) to predict the outcomes of all NC Congressional elections, including characterization of uncertainty in predictions.</p>
 </div>
 <div id="data-coming-soon" class="section level1">
 <h1>Data (coming soon)</h1>
