--- a/policies.html
+++ b/policies.html
@@ -344,7 +344,7 @@ div.tocify {
 </div>
 <div id="teams" class="section level4">
 <h4>Teams</h4>
-<p>On the first day of class, we will develop teams of 5-7 students - these teams will stay consistent throughout the semester (barring extraordinary circumstances). You will work in these teams during class and on the five group case studies. The process of forming teams will be completely transparent and based on self-reported data.</p>
+<p>On the first day of class, we will develop teams of 5-7 students - these teams will stay consistent throughout the semester (barring extraordinary circumstances). You will work in these teams during class and on the five group case studies. The process of forming teams will be completely transparent and based on self-reported data. Groups should adhere to specified <a href="grouppolicies.html">group policies</a>.</p>
 </div>
 <div id="case-studies" class="section level4">
 <h4>Case studies</h4>
