--- a/index.html
+++ b/index.html
@@ -338,8 +338,8 @@ div.tocify {
 </tr>
 <tr class="odd">
 <td><a href="https://stat.duke.edu/people/henry-kirveslahti-1">TA Henry Kirveslahti</a> <a href="mailto:henry.kirveslahti@duke.edu" title="email"><i class="fa fa-envelope"></i></a>  </td>
-<td>TBD</td>
-<td>TBD</td>
+<td>Monday and Wednesday 5-6pm</td>
+<td>203 Old Chemistry</td>
 </tr>
 </tbody>
 </table>
