trying drop html

--- a/cs01.html
+++ b/cs01.html
@@ -345,8 +345,7 @@ div.tocify {
 <div id="slides" class="section level1">
 <h1>Slides</h1>
 <p><a href="decks/cs01_1_deck.html">Birth weight data</a></p>
-<p><a href="decks/cs01_3_deck.html">Least squares and robust regression</a></p>
-<p><a href="decks/cs01_2_deck.html">Model validation</a></p>
+<p><a href="decks/cs01_3_deck.html">Regression and Model Validation</a></p>
 <p><a href="decks/cs01_4_deck.html">Introduction to causal inference</a></p>
 </div>
 
