--- a/cs02.html
+++ b/cs02.html
@@ -353,10 +353,8 @@ div.tocify {
 <h1>Slides</h1>
 <p><a href="decks/cs02_1_deck.html">Initial description of CIA Factbook data and plotting in R</a></p>
 <p><a href="decks/cs02_2_deck.html">Obtaining Tableau Guide</a></p>
-<p><a href="decks/cs02_3_deck.html">Tableau visualization of infant mortality</a> <!---
-[Tableau dashboard visualization of infant mortality](decks/cs02_4_deck.html)
-
----></p>
+<p><a href="decks/cs02_3_deck.html">Tableau visualization of infant mortality</a></p>
+<p><a href="decks/cs02_4_deck.html">Tableau dashboard visualization of infant mortality</a></p>
 </div>
 
 
