fix ma office hours

--- a/index.html
+++ b/index.html
@@ -333,13 +333,13 @@ div.tocify {
 </tr>
 <tr class="even">
 <td><a href="https://www2.stat.duke.edu/~oma9/">TA Michael Akande</a> <a href="mailto:olanrewaju.akande@duke.edu" title="email"><i class="fa fa-envelope"></i></a>  </td>
-<td>Tuesday 5-6pm and Friday 2:25-3:35pm</td>
-<td>TBD</td>
+<td>Tuesday 5-6pm and Friday 2:25-3:25pm</td>
+<td>203B Old Chemistry</td>
 </tr>
 <tr class="odd">
 <td><a href="https://stat.duke.edu/people/henry-kirveslahti-1">TA Henry Kirveslahti</a> <a href="mailto:henry.kirveslahti@duke.edu" title="email"><i class="fa fa-envelope"></i></a>  </td>
 <td>Monday and Wednesday 5-6pm</td>
-<td>203 Old Chemistry</td>
+<td>203B Old Chemistry</td>
 </tr>
 </tbody>
 </table>
