--- a/decks/cs04_1_deck.html
+++ b/decks/cs04_1_deck.html
@@ -459,12 +459,17 @@ document.getElementsByTagName('head')[0].appendChild(style);
 
 <section id="introduction" class="slide level2">
 <h2>Introduction</h2>
+<p>Use the interesting example from Carl Morris about elections and when you should be more confident…from 779 notes on binomial proportions?</p>
+</section>
+<section id="methods-for-prediction" class="slide level2">
+<h2>Methods for prediction</h2>
 <p>We will visit some information sources you may consider when designing your own election prediction strategy. Each source can be used as a starting point, and then expanded upon or combined with another approach, to obtain the best possible prediction.</p>
 </section>
 <section id="current-polling-data" class="slide level2">
 <h2>Current Polling Data</h2>
 <p>One strategy for predicting the winner in an election would be to use the latest aggregate polling data from a reputable source, e.g. FiveThirtyEight or The New York Times.</p>
 <ul>
+<li>Polls may use land lines (robocalls), cell phones, or web surveys.</li>
 <li>Some polls are of likely voters, while others may not restrict to this group</li>
 <li>Polls vary in quality (you can find some quality ratings online)</li>
 <li>Polls may be subject to bias (e.g., nonresponse bias, assumptions involved in determining “likely voters”)</li>
