--- a/policies.html
+++ b/policies.html
@@ -350,7 +350,7 @@ div.tocify {
 <h4>Case studies</h4>
 <p>STA 440 involves detailed analysis of a series of case studies using current, relevant data. Each case study will involve a final submission and in some cases one or more interim submissions. Points will be allocated separately for each submission and case study based on the scope of work. Final case study submissions will involve a written report and possibly an oral presentation to be viewed by the other teams (in class or by video, as assigned).</p>
 <p>Additional details on the case studies will be provided as the course progresses.</p>
-<p>Individual contributions to each submission will be assessed using the fair division software Spliddit. Team members must provide Spliddit assessments in order to receive credit for an assignment.</p>
+<p>Individual contributions to each submission will be assessed using the fair division software <a href="http://www.spliddit.org">Spliddit</a>. Team members must provide Spliddit assessments in order to receive credit for an assignment.</p>
 <p>Each individual case study will be graded based on written reports (interim and final) and an oral presentation. Students may not collaborate with anyone on the individual case study, which should be treated like a take-home exam.</p>
 <p>Each case study will have a page limit, and under no circumstances should font sizes less than 11 point be used, with the exception of labels in figures (and then only if they are still clearly legible to readers of all ages).</p>
 </div>
@@ -403,7 +403,7 @@ div.tocify {
 </div>
 <div id="excused-absences" class="section level3">
 <h3>Excused absences</h3>
-<p>Students who miss a class due to a scheduled varsity trip, religious holiday, or short-term illness should fill out an online <a href="http://trinity.duke.edu/academic-requirements?p=notification-of-varsity-athletic-participation-novap">NOVAP</a>, <a href="http://trinity.duke.edu/academic-requirements?p=religious-observance">RHoliday</a> or <a href="http://trinity.duke.edu/academic-requirements?p=policy-short-term-illness-notification">short-term illness</a> form respectively. Note that these excused absences do not excuse you from assigned case studies; it is your responsibility to make alternative arrangements with your team to participate.</p>
+<p>Students who miss a class due to a scheduled varsity trip, religious holiday, or short-term illness should fill out an online <a href="https://trinity.duke.edu/undergraduate/academic-policies/athletic-varsity-participation">NOVAP</a>, <a href="https://trinity.duke.edu/undergraduate/academic-policies/religious-holidays">RHoliday</a> or <a href="http://trinity.duke.edu/academic-requirements?p=policy-short-term-illness-notification">short-term illness</a> form respectively. Note that these excused absences do not excuse you from assigned case studies; it is your responsibility to make alternative arrangements with your team to participate.</p>
 <p>If you are faced with a personal or family emergency or a chronic health condition that interferes with your ability to attend or complete classes, you should contact your academic dean’s office. See more information on policies surrounding these conditions at <a href="https://trinity.duke.edu/undergraduate/academic-policies/personal-emergencies" class="uri">https://trinity.duke.edu/undergraduate/academic-policies/personal-emergencies</a>. Your academic dean can also provide more information.</p>
 </div>
 <div id="late-missed-work" class="section level3">
