--- a/policies.html
+++ b/policies.html
@@ -340,7 +340,7 @@ div.tocify {
 <h3>Course components</h3>
 <div id="class-sessions" class="section level4">
 <h4>Class sessions</h4>
-<p>If you miss class or would like to review the material covered in class, you can view the recordings <a href="">AT THIS LINK THAT WILL BE ADDED WHEN GIVEN TO ME</a>. Note that you will need to log in with your Net ID.</p>
+<p>If you miss class or would like to review the material covered in class, you can <a href="https://trinity.capture.duke.edu/Panopto/Pages/Sessions/List.aspx?folderID=735bff35-7bfa-4d15-a407-a94a00e1ff40">view the recordings</a>. Note that you will need to log in with your Net ID.</p>
 </div>
 <div id="teams" class="section level4">
 <h4>Teams</h4>
