--- a/index.html
+++ b/index.html
@@ -368,13 +368,13 @@ div.tocify {
 <tbody>
 <tr class="odd">
 <td>August 29</td>
-<td>Welcome, Groups, and CS1: Birth Weight</td>
+<td>Welcome and Groups</td>
 <td>Regression warm-up (in class)</td>
 </tr>
 <tr class="even">
 <td>August 31</td>
-<td>CS1: Model Selection &amp; Validation</td>
-<td></td>
+<td>CS1: Birth Weight, Model Selection &amp; Validation</td>
+<td>Getting to Know You Sheet</td>
 </tr>
 <tr class="odd">
 <td>September 5</td>
