--- a/decks/cs01_3_deck.html
+++ b/decks/cs01_3_deck.html
@@ -812,7 +812,7 @@ m4_weights[order(m4$w)[c(1:5, (length(m4$w)-5):length(m4$w))],]
 </section>
 <section id="leave-one-out-cross-validation" class="slide level2">
 <h2>Leave-one-out cross-validation</h2>
-<p><em>Leave-one-out cross-validation</em>, in which <span class="math inline">\(k=1\)</span>, is a special case (more computationally intensive except in special cases). Test error estimates using <span class="math inline">\(k=5\)</span> or <span class="math inline">\(k=10\)</span> have been shown to have good statistical properties, motivating these common choices.</p>
+<p><em>Leave-one-out cross-validation</em>, in which <span class="math inline">\(k=n\)</span>, is a special case (more computationally intensive except in special cases). Test error estimates using <span class="math inline">\(k=5\)</span> or <span class="math inline">\(k=10\)</span> have been shown to have good statistical properties, motivating these common choices.</p>
 </section>
 <section id="leave-one-out-cross-validation-1" class="slide level2">
 <h2>Leave-one-out cross-validation</h2>
