--- a/index.html
+++ b/index.html
@@ -393,13 +393,13 @@ div.tocify {
 </tr>
 <tr class="even">
 <td>September 14</td>
-<td>CS2: Lab: Tableau</td>
-<td>CS1 Final Report: Smoking and Birth Weight</td>
+<td>CS2: Lab: Modeling for CS 1 &amp; 2</td>
+<td></td>
 </tr>
 <tr class="odd">
 <td>September 19</td>
-<td>CS2: Hands-On with Tableau</td>
-<td></td>
+<td>CS2: Hands on with Tableau</td>
+<td>CS1 Final Report: Smoking and Birth Weight</td>
 </tr>
 <tr class="even">
 <td>September 21</td>
