--- a/decks/cs01_3_deck.html
+++ b/decks/cs01_3_deck.html
@@ -821,7 +821,8 @@ m4_weights[order(m4$w)[c(1:5, (length(m4$w)-5):length(m4$w))],]
 <section id="class-exercises-1" class="slide level2">
 <h2>Class Exercises</h2>
 <ul>
-<li>In the full data, evaluate the observations with largest residuals/weights and discuss possible reasons for the large residuals</li>
+<li>Subset the data to 2016 births in Duplin County (CORES=31).</li>
+<li>Evaluate the observations with largest residuals/weights and discuss possible reasons for the large residuals</li>
 <li>Divide the data into <span class="math inline">\(k\)</span> folds, where <span class="math inline">\(k\)</span> is the number of group members present, and assign each group member a different validation set (setting a seed may be helpful). See <a href="https://gist.github.com/duttashi/a51c71acb7388c535e30b57854598e77">helpful code</a></li>
 </ul>
 </section>
