--- a/cs03.html
+++ b/cs03.html
@@ -338,16 +338,16 @@ div.tocify {
 <p>Data Analysis Using Regression and Multilevel/Hierarchical Models by Gelman &amp; Hill</p>
 <p><a href="NCinfantmortalityrates.pdf">2015 NC Infant Mortality Rates, from NC State Center for Health Statistics</a></p>
 </div>
-<div id="slides-coming-soon" class="section level1">
-<h1>Slides (coming soon)</h1>
+<div id="slides" class="section level1">
+<h1>Slides</h1>
+<ul>
+<li><p><a href="decks/cs03_1_deck.html">Infant Mortality in NC</a></p></li>
+<li><p><a href="decks/cs03_2_deck.html">Binomial regression</a></p></li>
+</ul>
 <!---
-
-[Infant Mortality in NC](decks/cs03_1_deck.html)
-
 [Multilevel Modeling Tutorial: Liz (including radon analysis from Gelman and Hill)](decks/cs03_2_deck.html)
 
 
-[Binomial regression:  Amy ](decks/cs03_3_deck.html)
 
 [Multilevel modeling with categorical data: Liz](decks/cs03_4_deck.html)
 
