--- a/decks/cs03_1_deck.html
+++ b/decks/cs03_1_deck.html
@@ -496,7 +496,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </section>
 <section id="nc-data-on-infant-mortality" class="slide level2">
 <h2>NC Data on Infant Mortality</h2>
-<p>Liz to write, show how to get infant mortality data for NC from birth and death files by county and race. Note that actual births and deaths cannot be linked, only grouped data.</p>
+<p>These data are not in the public domain but are available on the Sakai website. Note the death data are not available on an individual record level but as counts broken down by year, county, and race/ethnicity.</p>
 </section>
     </div>
   </div>
