--- a/decks/cs03_3_deck.html
+++ b/decks/cs03_3_deck.html
@@ -481,6 +481,28 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </section>
 <section id="hierarchical-linear-model" class="slide level2">
 <h2>Hierarchical linear model</h2>
+<p>The <em>hierarchical linear model</em> is the dominant approach to analysis of multilevel data. The correlation induced by clustering is described by random effects at each “level.” The higher levels in the hierarchy involve clusters of members at the lower levels.</p>
+</section>
+<section id="pooling-motivation" class="slide level2">
+<h2>Pooling motivation</h2>
+<p>Multilevel regression is a method for compromising between two extremes:</p>
+<ul>
+<li>Excluding a categorical predictor from a model (complete pooling)</li>
+<li>Estimating separate models within each level of the categorical predictor (no pooling)</li>
+</ul>
+</section>
+<section id="radon-study" class="slide level2">
+<h2>Radon study</h2>
+<p>Radon, a naturally-occurring radioactive gas, is a carcinogen known to cause lung cancer in high concentrations. Several thousand lung cancer deaths in the US per year are attributable to radon exposure.</p>
+<p>Radon levels in US homes varies greatly, and some homes have dangerously high radon levels. In order to identify areas of the US with high radon exposures, the US EPA conducted a study of radon levels in a random sample of more than 80,000 homes.</p>
+</section>
+<section id="radon-study-1" class="slide level2">
+<h2>Radon study</h2>
+<p>We wish to estimate the distribution of radon levels in houses within 85 counties in Minnesota.</p>
+<ul>
+<li><p>One estimate would be the average of all radon levels in Minnesota (same estimate for all counties), but this ignores variation across counties, and some counties may have higher radon levels naturally than others (radon is more commonly found in soils with granite rock, as opposed to some other soil types).</p></li>
+<li><p>Another estimate would be just to average the radon level in each county, which can over-fit the data within county (for example, Lac Qui Parle County, which has the highest radon level of all the 85 MN counties, has radon measures from only 2 homes).</p></li>
+</ul>
 </section>
     </div>
   </div>
