--- a/decks/cs03_3_deck.html
+++ b/decks/cs03_3_deck.html
@@ -504,6 +504,9 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <li><p>Another estimate would be just to average the radon level in each county, which can over-fit the data within county (for example, Lac Qui Parle County, which has the highest radon level of all the 85 MN counties, has radon measures from only 2 homes).</p></li>
 </ul>
 </section>
+<section id="data-exploration" class="slide level2">
+<h2>Data exploration</h2>
+</section>
     </div>
   </div>
 
