--- a/decks/cs03_3_deck.html
+++ b/decks/cs03_3_deck.html
@@ -518,8 +518,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <section id="radon-study-3" class="slide level2">
 <h2>Radon study</h2>
 <p><span class="math display">\[\widehat{\alpha}_j \approx
-\frac{\frac{n_j}{{\sigma^2}_y}\overline{y}_j+\frac{1}{{\sigma^2}_{\alpha}}\overline{y}_{\cdot
-    \cdot}}{\frac{n_j}{{\sigma^2}_y}+\frac{1}{{\sigma^2}_{\alpha}}},\]</span> where</p>
+\frac{\frac{n_j}{{\sigma^2}_y}\overline{y}_j+\frac{1}{{\sigma^2}_{\alpha}}\overline{y}_{\cdot\cdot}}{\frac{n_j}{{\sigma^2}_y}+\frac{1}{{\sigma^2}_{\alpha}}},\]</span> where</p>
 <ul>
 <li><p><span class="math inline">\(n_j\)</span> is the number of homes measured in county <span class="math inline">\(j\)</span></p></li>
 <li><p><span class="math inline">\({\sigma^2}_y\)</span> is the within-county variance in the log radon measurements</p></li>
