mlm set of notes

--- a/cs03.html
+++ b/cs03.html
@@ -335,7 +335,7 @@ div.tocify {
 </div>
 <div id="resources" class="section level1">
 <h1>Resources</h1>
-<p>Data Analysis Using Regression and Multilevel/Hierarchical Models by Gelman &amp; Hill</p>
+<p>Data Analysis Using Regression and Multilevel/Hierarchical Models by Gelman &amp; Hill (Chapters 12-15 in particular)</p>
 <p><a href="NCinfantmortalityrates.pdf">2015 NC Infant Mortality Rates, from NC State Center for Health Statistics</a></p>
 </div>
 <div id="slides" class="section level1">
