--- a/cs02.html
+++ b/cs02.html
@@ -347,6 +347,7 @@ div.tocify {
 <h1>Resources</h1>
 <p>Chapter 11 of Data Science in R: A Case Studies Approach to Computational Reasoning and Problem Solving by Nolan and Temple Lang (free e-book through Duke Libraries)</p>
 <p><a href="https://shiny.rstudio.com/tutorial/">Shiny Tutorials</a></p>
+<p><a href="decks/cs02_shiny.Rmd">Super simple Shiny app you can edit</a></p>
 <p><a href="https://www.tableau.com/academic/students">Tableau for Students</a></p>
 <p><a href="http://library.capture.duke.edu/Panopto/Pages/Viewer.aspx?id=05708679-00e5-45c3-bb31-fd3724cd8009">Introduction to Tableau Video</a></p>
 </div>
