--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ div.tocify {
 </tr>
 <tr class="even">
 <td>September 14</td>
-<td>CS2: Lab: Modeling for CS 1 &amp; 2</td>
+<td>CS2: Lab: Hands on for CS 1 &amp; 2</td>
 <td></td>
 </tr>
 <tr class="odd">
@@ -403,7 +403,7 @@ div.tocify {
 </tr>
 <tr class="even">
 <td>September 21</td>
-<td>CS3: Hierarchical Models: Birth Weight Disparities</td>
+<td>CS3: Birth Weight Disparities &amp; Binomial regression</td>
 <td></td>
 </tr>
 <tr class="odd">
@@ -413,7 +413,7 @@ div.tocify {
 </tr>
 <tr class="even">
 <td>September 28</td>
-<td>CS3: Multilevel Models: Time Trends</td>
+<td>CS3: Multilevel Models</td>
 <td></td>
 </tr>
 <tr class="odd">
