--- a/decks/cs04_1_deck.html
+++ b/decks/cs04_1_deck.html
@@ -477,8 +477,18 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <li>More polls focus on national sentiments than on state-specific sentiments</li>
 </ul>
 </section>
+<section id="sources-of-election-uncertainty" class="slide level2">
+<h2>Sources of election uncertainty</h2>
+<ul>
+<li>Sample sizes of polls</li>
+<li>Individual changes in turnout</li>
+<li>Systematic changes in turnout (different turnout patterns from historical records, e.g. more young people vote)</li>
+<li>Individual variation in support (undecided voters)</li>
+<li>Unmeasured bias in polls</li>
+</ul>
+</section>
 <section id="historical-results" class="slide level2">
-<h2>Historical Results</h2>
+<h2>Historical results</h2>
 <ul>
 <li>Use historical data from past elections, e.g. within a house district, within a state, nationally</li>
 <li>Useful when a state consistently votes for the same party but less useful for swing states</li>
