--- a/cs03.html
+++ b/cs03.html
@@ -345,13 +345,13 @@ div.tocify {
 <li><p><a href="decks/cs03_2_deck.html">Binomial regression</a></p></li>
 </ul>
 <!---
-[Multilevel Modeling Tutorial: Liz (including radon analysis from Gelman and Hill)](decks/cs03_2_deck.html)
+[Multilevel Modeling Tutorial:  (including radon analysis from Gelman and Hill)](decks/cs03_3_deck.html)
 
 
 
-[Multilevel modeling with categorical data: Liz](decks/cs03_4_deck.html)
+[Multilevel modeling with categorical data:](decks/cs03_4_deck.html)
 
-[Bayesian Hierarchical Modeing Using BMRS: Liz](decks/cs03_5_deck.html)
+[Bayesian Hierarchical Modeing Using BMRS:](decks/cs03_5_deck.html)
 
 --->
 </div>
