notes for next time

--- a/cs03.html
+++ b/cs03.html
@@ -330,7 +330,7 @@ div.tocify {
 <ul>
 <li>Interim report 1: create an engaging visualization of observed infant mortality rates by year, county and race</li>
 <li>Interim report 2: using a hierarchical model, obtain estimates of infant mortality rates in 2015 by county and race. Compare to the published estimates from the SCHS and discuss any discrepancies in detail. Your report should include a visualization for 2015, a one page (maximum) description of the model used, 1-2 pages (maximum) describing your findings, and a one page report targeted at SCHS explaining how use of your model to obtain estimated rates compares to the methods you have seen them use so far, which are pooling years (as in the 2010-2014 graphic) or reporting rates based on small cell counts (as in 2015). In your report targeted to SCHS, if you feel they should use different methodology (e.g., your model) for estimating infant mortality rates, be sure to make a clear argument for doing so.</li>
-<li>Final report: prepare a report, not to exceed 5 pages and accompanied by useful visualizations, describing infant mortality in NC by county and race, along with any trends over time</li>
+<li>Final report: prepare a report, not to exceed 5 pages and accompanied by useful visualizations, describing infant mortality in NC by county and race, along with any trends over time overall or in subgroups</li>
 </ul>
 </div>
 <div id="resources" class="section level1">
