--- a/cs03.html
+++ b/cs03.html
@@ -343,11 +343,9 @@ div.tocify {
 <ul>
 <li><p><a href="decks/cs03_1_deck.html">Infant Mortality in NC</a></p></li>
 <li><p><a href="decks/cs03_2_deck.html">Binomial regression</a></p></li>
+<li><p><a href="decks/cs03_3_deck.html">Multilevel Modeling for Gaussian Data</a></p></li>
 </ul>
 <!---
-[Multilevel Modeling Tutorial:  (including radon analysis from Gelman and Hill)](decks/cs03_3_deck.html)
-
-
 
 [Multilevel modeling with categorical data:](decks/cs03_4_deck.html)
 
