--- a/index.html
+++ b/index.html
@@ -418,22 +418,22 @@ div.tocify {
 </tr>
 <tr class="odd">
 <td>October 3</td>
-<td>CS3: Generalized Linear Mixed Effects Models</td>
+<td>CS3: Generalized Linear Multilevel Models</td>
 <td>CS3 Interim Report: Infant Mortality Visualization</td>
 </tr>
 <tr class="even">
 <td>October 5</td>
-<td>CS3: Bayesian Hierarchical Models</td>
-<td>Midsemester Grades Due (my deliverable) &amp; CS4 Evaluation Criteria</td>
+<td>CS4: Election Forecasting</td>
+<td>Midsemester Grades Due (my deliverable)</td>
 </tr>
 <tr class="odd">
 <td>October 10</td>
-<td>CS4: Election Forecasting</td>
+<td>CS4: Election Forecasting with “Mr. P”</td>
 <td>CS3 Interim Report: County-Specific Mortality by Group</td>
 </tr>
 <tr class="even">
 <td>October 12</td>
-<td>CS4: Election Forecasting with “Mr. P”</td>
+<td>Lab: Multilevel Models for CS3 and CS4</td>
 <td>CS4 Election Predictions</td>
 </tr>
 <tr class="odd">
@@ -448,7 +448,7 @@ div.tocify {
 </tr>
 <tr class="odd">
 <td>October 24</td>
-<td>CS4: Presentations: Who Votes in NC?</td>
+<td>CS4: Group Presentations: Who Votes in NC?</td>
 <td>CS4 Interim Report: Who Votes in NC?</td>
 </tr>
 <tr class="even">
