--- a/cs03.html
+++ b/cs03.html
@@ -343,15 +343,10 @@ div.tocify {
 <ul>
 <li><p><a href="decks/cs03_1_deck.html">Infant Mortality in NC</a></p></li>
 <li><p><a href="decks/cs03_2_deck.html">Binomial regression</a></p></li>
-<li><p><a href="decks/cs03_3_deck.html">Multilevel Modeling for Gaussian Data</a></p></li>
+<li><p><a href="decks/cs03_3_deck.html">Multilevel models for Gaussian data</a></p></li>
+<li><p><a href="decks/cs03_4_deck.html">Multilevel models for binary data</a></p></li>
+<li><p><a href="decks/cs03_5_deck.html">MLM case study: Red State, Blue State</a></p></li>
 </ul>
-<!---
-
-[Multilevel modeling with categorical data:](decks/cs03_4_deck.html)
-
-[Bayesian Hierarchical Modeing Using BMRS:](decks/cs03_5_deck.html)
-
---->
 </div>
 
 
